# OOP_lab_5

./: CMakeLists.txt  README.md
include/: dyn_array.hpp  fixed_resource.hpp
src/: main.cpp
tests/: test.cpp
